k8s/apps/gobank/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gobank-api
  labels:
    app: gobank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gobank-api
  template:
    metadata:
      labels:
        app: gobank-api
    spec:
      containers:
        - name: gobank-api
          image: ghcr.io/hypernaser/gobank:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
