k8s/apps/gobank/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gobank-api-service
spec:
  selector:
    app: gobank-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
