k8s/apps/gobank/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gobank-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gobank-api-service
                port:
                  number: 80
